# quire

./: .gitignore  CLAUDE.md  PLAN.md  README.md  config.template.toml  pyproject.toml
docs/: api-discovery.md
src/quire/: cli.py  config.py  cwa.py  hardcover.py  notify.py  shelfmark.py  sources.py  state.py
